<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ToolsActivity!</string>
    <string name="app_name">理财小助手</string>
    <string name="main_jizhangqi">记账工具</string>
    <string name="main_benwang">备忘记事</string>
    <string name="main_jisuan">简易计算</string>
    <string name="main_licaiyoudao">理财有道</string>
    <string name="main_set_quanjushezhi">全局设置</string>
    <string name="main_bt_exit">退出程序</string>
    <string name="main_bt_about">关于软件</string>
    <string name="main_bt_zhuangtai">手机状态</string>
    <string name="jz_name">小日子计帐器</string>
    <string name="jz_zhichu">当前支出</string>
    <string name="jz_shouru">当前收入</string>
    <string name="jz_benzhou_zhichu">本周支出</string>
    <string name="jz_benyue_zhichu">本月支出</string>
    <string name="jz_benyue_shouru">本月收入</string>
    <string name="jz_yusuan">当前本月预算：</string>
    <string name="jz_yusuanshengyu">预算余额</string>
    <string name="jz_shouru_bennian">本年收入</string>
    <string name="jz_shouru_benyue">本月收入</string>
    <string name="jz_shouru_jintian">今天收入</string>
    <string name="jz_tab2_zhichu">支出</string>
    <string name="jz_tab2_shouru">收入</string>
    <string name="jz_tab2_jiedai">借贷</string>
    <string name="jz_tab2_jine">金额</string>
    <string name="jz_tab2_leibie">类别</string>
    <string name="jz_tab2_shijian">时间</string>
    <string name="jz_tab2_beizhu">备注</string>
    <string name="jz_tab2_tianjiapic">照片</string>
    <string name="jz_tab2_jinenum">0.00</string>
    <string name="jz_tab2_leibieres">餐饮>晚餐</string>
    <string name="jz_tab2_timeres">20160406</string>
    <string name="jz_tab2_beizhures">无备注</string>
    <string name="jz_1">1</string>
    <string name="jz_2">2</string>
    <string name="jz_3">3</string>
    <string name="jz_4">4</string>
    <string name="jz_5">5</string>
    <string name="jz_6">6</string>
    <string name="jz_7">7</string>
    <string name="jz_8">8</string>
    <string name="jz_9">9</string>
    <string name="jz_0">0</string>
    <string name="jz_d">.</string>
    <string name="jz_tab2_fanhui">返回</string>
    <string name="jz_tab2_queding">确定</string>
    <string name="jz_del">del</string>
    <string name="jz_main_add">添加</string>
    <string name="jz_main_mingxi">明细</string>
    <string name="jz_main_baobiao">报表</string>
    <string name="jz_main_yusuan">预算</string>
    <string name="jz_main_setting">设置</string>
    <string name="jz_add_save">保存</string>
    <string name="jz_add_quxiao">返回</string>
    <string name="leibie_item0_bt">明细类别</string>
    <string name="leibie_item_bt">添加子类</string>
    <string name="beizhu_item_bt">备注</string>
    <string name="time_item_bt">时间</string>
    <string name="jz_add_nowtime">15:15</string>
    <string name="jz_mingxi_tittle">账目明细</string>
    <string name="jz_mingxi_huizhong">汇总</string>
    <string name="jz_mingxi_shengyu">本月剩余</string>
    <string name="jz_add_del">删除</string>
    <string name="bw_text_size">T</string>
    <string name="bw_main_quanxuan">全选所有</string>
    <string name="bw_main_del">删除选中</string>
    <string name="bw_mian_quxiaoquanze">取消选择</string>

    <string name="js_jia">+</string>
    <string name="js_jian">-</string>
    <string name="js_cheng">*</string>
    <string name="js_dian">．</string>
    <string name="js_chu">/</string>
    <string name="js_deng">=</string>
    <string name="js_shanchu">删除</string>
    <string name="js_qingchu">清除</string>

    <string name="jz_benyueyusuan">本月预算</string>
    <string name="dialog_about">如果您要了解理财助手每个子功能的特点和使用方法，请在该功能对应的图标上长按不放，程序将会弹出相应的提示信息。该程序目前适用于Android2.2及以上的版本，如有问题反馈请发送邮件至XXXXX@qq.com</string>
    <string name="bw_hint">输入完后直接按返回键，程序将自动保存。</string>
    <string name="main_hiddenguanggao">隐藏提醒</string>
    <string name="main_help">使用帮助</string>
    <!-- 登陆使用-begin -->
    <string name="strInputAccHint">输入帐号</string>  
    <string name="strAccInputLabel">帐号</string>  
    <string name="strPswInputLabel">密码</string>  
    <string name="opt_remember">记住密码</string>
    <string name="usermanager">用户管理</string>
    <string name="save">保存</string>
    <string name="login">登 录</string> 
    <string name="register">注册</string>
    <string name="strInputPwdHint">输入密码</string>
    <string name="strPswConfirmLabel">确认密码</string>
    <string name="sex">性别</string>
    <string name="tel">手机</string>
    <!-- 登陆使用-end -->
    <string name="exit">注销</string>
     <string-array name="sprinnerSex">
     	<item>男</item>  
     	<item>女</item>  
    </string-array>
    <!-- 设置- -->
    <string name="jz_shezhi">程序设置</string>
    <string name="jz_shezhi_about">关于软件</string>
    <string name="jz_shezhi_expenditureType_Manage">支出类型管理</string>
    <string name="jz_shezhi_incomeType_Manage">收入类型管理</string>
    <string name="jz_shezhi_qingchu">清除所有消费记录</string>

    <string name="ys_type">预算类型</string>
    <string name="ys_recommendation">推荐值</string>
    <string name="ys_actually">您的设置</string>
    <string name="jz_yusuan_yue">预算余额</string>

    <string name="Article_1">把理财作为一种基本的生活方式 </string>
    <string name="Article_2">宠爱自己的爱好，千万别吝啬 </string>
    <string name="Article_3">记账是最常见的理财技巧</string>
    <string name="Article_4">金钱不是人生的全部，别为金钱赌明天 </string>
    <string name="Article_5">快乐网购，方便又省钱 </string>
    <string name="Article_6">始于累积，存下人生的第一桶金 </string>
    <string name="Article_7">制定理财目标，梦想照进现实 </string>
    <string name="Article_8">自制力带来无穷的财富 </string>
    <string name="text_null"> </string>
    <string name="mxjj">梦想基金</string>
</resources>