<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:background="@drawable/bw_new_et_bg_1"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="130dp" >

        <EditText
            android:id="@+id/js_content_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bw_new_et_bg_1"
            android:cursorVisible="false"
            android:editable="false"
            android:hint=""
            android:maxLength="22"
            android:singleLine="false"
            android:text="@string/jz_0"
            android:textSize="43dp"
            android:visibility="visible" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/js_b1"
                style="@style/js_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/jz_1" />

            <Button
                android:id="@+id/js_b2"
                style="@style/js_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/jz_2" />

            <Button
                android:id="@+id/js_b3"
                style="@style/js_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/jz_3" />

            <Button
                android:id="@+id/js_bjia"
                style="@style/js_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/js_jia" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/js_b4"
                style="@style/js_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/jz_4" />

            <Button
                android:id="@+id/js_b5"
                style="@style/js_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/jz_5" />

            <Button
                android:id="@+id/js_b6"
                style="@style/js_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/jz_6" />

            <Button
                android:id="@+id/js_bjian"
                style="@style/js_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/js_jian" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/js_b7"
                style="@style/js_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/jz_7" />

            <Button
                android:id="@+id/js_b8"
                style="@style/js_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/jz_8" />

            <Button
                android:id="@+id/js_b9"
                style="@style/js_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/jz_9" />

            <Button
                android:id="@+id/js_bcheng"
                style="@style/js_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/js_cheng" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/js_b0"
                style="@style/js_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/jz_0" />

            <Button
                android:id="@+id/js_bdian"
                style="@style/js_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/jz_d" />

            <Button
                android:id="@+id/js_bdeng"
                style="@style/js_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/js_deng" />

            <Button
                android:id="@+id/js_bchu"
                style="@style/js_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/js_chu" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <Button
                android:id="@+id/js_bdel"
                style="@style/js_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/js_shanchu" />

            <Button
                android:id="@+id/js_bclean"
                style="@style/js_button_style"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/js_qingchu" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>