<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/common_bg" >

    <LinearLayout
        android:id="@+id/jz_yusuan_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">


        <TextView
            android:id="@+id/jz_yusuan_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/jz_yusuan"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <EditText
            android:id="@+id/jz_yusuan_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="number"
            android:maxLength="8" >
            <requestFocus />
        </EditText>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp" >
            <TextView
                android:id="@+id/ys_type_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/ys_type"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/ys_recommendation_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/ys_recommendation"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/ys_actually_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="8dp"
                android:text="@string/ys_actually"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="315dp"
            android:orientation="horizontal">
        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="315dp"
            android:cacheColorHint="#00000000"
            android:choiceMode="singleChoice"
            android:listSelector="@android:color/transparent"
            android:divider="@android:color/transparent"
            android:dividerHeight="20dip"
            android:focusableInTouchMode="true"
            android:longClickable="true"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="10dip"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="1dp"
            android:layout_weight="0.22">
        <TextView
            android:layout_marginLeft="45dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jz_yusuan_yue"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:id="@+id/jz_yusuan_yue_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="5dp"
            android:text="@string/jz_0"
            android:layout_gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="1dp"
             >

            <Button
                android:id="@+id/jz_yusuan_savebt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/jz_add_save" />

            <Button
                android:id="@+id/jz_yusuan_cancelbt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/jz_add_quxiao"
                 />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>