<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/jz_mingxi_title"
        android:gravity="center" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/jz_shezhi"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical"
        android:background="#fcfcfc">

        <RelativeLayout
            android:id="@+id/jz_shezhi_expenditureType_Manage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/jz_paper_bg"
            android:gravity="center" >

            <TextView
                android:id="@+id/stockText30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jz_shezhi_expenditureType_Manage"
                android:textColor="#000000"
                android:textSize="25dp" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/jz_shezhi_incomeType_Manage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/jz_paper_bg"
            android:gravity="center" >

            <TextView
                android:id="@+id/stockText31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jz_shezhi_incomeType_Manage"
                android:textColor="#000000"
                android:textSize="25dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/jz_shezhi_qingchu_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/jz_paper_bg"
            android:gravity="center" >

            <TextView
                android:id="@+id/stockText29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jz_shezhi_qingchu"
                android:textColor="#000000"
                android:textSize="25dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/jz_shezhi_about_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/jz_paper_bg"
            android:gravity="center" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jz_shezhi_about"
                android:textColor="#000000"
                android:textSize="25dp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>