<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:id="@+id/loginRoot"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">

	<LinearLayout
	    android:id="@+id/LinearLayout01"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1.0"
	    android:background="@drawable/default_bg"
	    android:orientation="vertical" >

	    <RelativeLayout
	        android:id="@+id/RelativeLayout02"
	        android:layout_width="fill_parent"
	        android:layout_height="250dp"
	        android:layout_marginLeft="15.0px"
	        android:layout_marginRight="15.0px"
	        android:layout_marginTop="62.0px"
	        android:background="@drawable/login_back"
	        android:paddingBottom="10.0px"
	        android:paddingTop="21.0px" >

	        <ImageView
	            android:id="@+id/faceImg"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:background="@drawable/login_head" />

	        <EditText
	            android:id="@+id/login_edit_account"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_marginBottom="5.0px"
	            android:layout_marginLeft="5.0dip"
	            android:layout_marginRight="5.0dip"
	            android:layout_marginTop="5.0dip"
	            android:layout_toRightOf="@+id/faceImg"
	            android:background="@drawable/qq_edit_login"
	            android:hint="@string/strInputAccHint"
	            android:inputType="text"
	            android:maxLength="10"
	            android:paddingLeft="45.0sp"
	            android:saveEnabled="true" />

	        <TextView
	            android:id="@+id/TextView01"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBottom="@+id/login_edit_account"
	            android:layout_alignLeft="@+id/login_edit_account"
	            android:layout_alignTop="@+id/login_edit_account"
	            android:layout_marginRight="15.0sp"
	            android:gravity="center_vertical"
	            android:paddingLeft="7.0sp"
	            android:text="@string/strAccInputLabel"
	            android:textColor="#ff3f3f3f"
	            android:textSize="16.0dip" />


	        <EditText
	            android:id="@+id/login_edit_pwd"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/login_edit_account"
	            android:layout_alignRight="@+id/login_edit_account"
	            android:layout_below="@+id/login_edit_account"
	            android:layout_marginRight="1.0dip"
	            android:background="@drawable/qq_edit_login"
	            android:inputType="textPassword"
	            android:maxLength="16"
	            android:paddingLeft="45.0sp"
	            android:saveEnabled="true" />

	        <TextView
	            android:id="@+id/TextView02"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignBottom="@+id/login_edit_pwd"
	            android:layout_alignRight="@+id/TextView01"
	            android:layout_alignTop="@+id/login_edit_pwd"
	            android:gravity="center_vertical"
	            android:paddingLeft="7.0sp"
	            android:text="@string/strPswInputLabel"
	            android:textColor="#ff3f3f3f"
	            android:textSize="16.0dip" />

	        <Button
	            android:id="@+id/btn_login"
	            android:layout_width="150.0px"
	            android:layout_height="80.0px"
	            android:layout_alignRight="@+id/login_edit_pwd"
	            android:layout_below="@+id/faceImg"
	            android:layout_marginTop="19dp"
	            android:text="@string/login" />

	        <CheckBox
	            android:id="@+id/cb_savepwd"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignLeft="@+id/faceImg"
	            android:layout_below="@+id/faceImg"
	            android:button="@drawable/qq_btn_check"
	            android:checked="true"
	            android:paddingLeft="25.0px"
	            android:text="@string/opt_remember"
	            android:textColor="#ff222222"
	            android:textSize="16.0sp" />
	    </RelativeLayout>

	    <TableLayout
	        android:id="@+id/TableLayout01"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="20.0px"
	        android:layout_marginRight="20.0px"
	        android:stretchColumns="1" >

	        <TableRow>
	        </TableRow>
	    </TableLayout>
	</LinearLayout>

	<RelativeLayout android:id="@+id/RelativeLayout01"
		android:background="@drawable/bottom" android:layout_width="fill_parent"
		android:layout_height="44.0dip">
		<ImageButton android:id="@+id/login_option"
			android:background="@drawable/option" android:clickable="true"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginLeft="13.0dip" android:layout_marginTop="2.0dip"
			android:layout_centerVertical="true" />
	</RelativeLayout>
</LinearLayout>
